--- a/Resources/compose-couchdb.yml
+++ b/Resources/compose-couchdb.yml
@@ -7,3 +7,7 @@ services:
     environment:
       COUCHDB_USER: admin
       COUCHDB_PASSWORD: admin
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
